--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "normalize.css": "^8.0.1",
+    "quill": "2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "2.0.0-beta.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "6"
   },
